_Infrastructure/service-map.yaml
apiVersion: v1
kind: Service
metadata:
  name: cap10bills-fantasy-map
  namespace: default
spec:
  selector:
    app: cap10bills-fantasy-map
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: cap10bills-fantasy-map
    protocol: TCP
    port: 9000
    targetPort: 9000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 9000
