_Infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fantasy-world
  namespace: default
spec:
  selector:
    app: fantasy-world
  type: LoadBalancer
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: fantasy-map
    protocol: TCP
    port: 9000
    targetPort: 9000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can spaecify a value in the `spec.ports[*].nodePort` field.
    nodePort: 32000
  - name: fantasy-towns
    protocol: TCP
    port: 8090
    targetPort: 8090
    nodePort: 32090
